--- a/sitereg/package.json
+++ b/sitereg/package.json
@@ -59,14 +59,14 @@
     "screenshot-protractor": "^1.0.0",
     "sha1": "^1.1.1",
     "tslib": "^1.10.0",
-    "yargs": "^13.2.4",
+    "yargs": "^17.3.1",
     "zlib": "^1.0.5",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.9",
-    "@angular/cli": "~7.3.4",
-    "@angular/compiler-cli": "~7.2.0",
+    "@angular-devkit/build-angular": "^13.2.3",
+    "@angular/cli": "^13.2.3",
+    "@angular/compiler-cli": "^13.2.2",
     "@angular/language-service": "~7.2.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
@@ -74,10 +74,10 @@
     "codelyzer": "~4.5.0",
     "jasmine": "^3.3.1",
     "jasmine-core": "~2.99.1",
-    "jasmine-reporters": "^2.3.2",
     "jasmine-json-test-reporter": "^1.0.0-beta",
+    "jasmine-reporters": "^2.3.2",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.0",
+    "karma": "^6.3.16",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
